[package]
name = "rust_circuits"
version = "0.0.1"
authors = ["Mohit Bhasi Thazhath <mohitbt@vt.edu>"]
edition = "2018"

[lib]
name = "rust_circuits"
crate-type = ["cdylib"]

[dependencies]
curve25519-dalek = { version = "2", default-features = false, features = ["u64_backend", "nightly", "serde", "alloc"] }
subtle = { version = "2", default-features = false }
sha3 = { version = "0.10" }
digest = { version = "0.8", default-features = false }
rand_core = { version = "0.5", default-features = false, features = ["alloc"] }
rand = { version = "0.7", default-features = false, features =["std"] }
byteorder = { version = "1", default-features = false }
serde = { version = "1", default-features = false, features = ["alloc"] }
serde_derive = { version = "1", default-features = false }
thiserror = { version = "1", optional = true }
merlin = { version = "2", default-features = false }
clear_on_drop = { version = "0.2", default-features = false, features = ["nightly"] }
failure = "0.1"
serde_json = "1.0.59"
base64 = "0.13.0"
itertools = "0.10.3"
rug = "1.7.0"
[dependencies.pyo3]
version = "0.13.2"
features = ["extension-module"]

[dependencies.bulletproofs_gadgets]
git = "https://github.com/m0bi5/bulletproofs-r1cs-gadgets"
rev = "0179fec"

[dependencies.bulletproofs]
git = "https://github.com/m0bi5/bulletproofs"
branch = "smt"
features = ["std", "avx2_backend", "yoloproofs"]
