[package]
name = "rust_mimc"
version = "0.0.1"
authors = ["Mohit Bhasi Thazhath <mohitbt@vt.edu>"]
edition = "2018"

[lib]
name = "rust_mimc"
crate-type = ["cdylib"]

[dependencies]
serde_json = "1.0.59"
curve25519-dalek = { version = "2", default-features = false, features = ["u64_backend", "nightly", "serde", "alloc"] }
sha3 = { version = "0.10" }
base64 = { version = "0.13.0" }

[dependencies.pyo3]
version = "0.13.2"
features = ["extension-module"]
