[package]
name = "rust_schnorr"
version = "0.0.1"
authors = ["Mohit Bhasi Thazhath <mohitbt@vt.edu>"]
edition = "2018"

[lib]
#name = "rust_schnorr"
crate-type = ["cdylib"]

[dependencies.pyo3]
version = "0.13.2"
features = ["extension-module"]

[dependencies]
schnorrkel = "0.9.1"
rand = "0.7.0"
base64 = "0.13.0"